Updated all translation files with placeholders

--- a/UIInfoSuite2/i18n/de.json
+++ b/UIInfoSuite2/i18n/de.json
@@ -39,6 +39,9 @@
   "LuckStatus4": "Fortuna's Laune ist heute absolut neutral",
   "LuckStatus5": "Das Glück ist heute nicht auf deiner Seite",
   "LuckStatus6": "Vielleicht solltest du heute zu Hause bleiben",
+  // Display icons - Merchants
+  "SandyClothingItemRare": "Sandy has rare clothing for sale",  // TODO
+  "SandyClothingItemAll": "Sandy's Clothing Item: {0}",         // TODO
   //Settings - General
   "ShowLevelUpAnimation": "Zeige Aufstiegsanimation",
   "ShowExperienceBar": "Zeige Erfahrungsleiste",
@@ -68,6 +71,8 @@
   "ShowExactValue": "Zeige exakten Wert",
   "ShowSeasonalBerry": "Zeige saisonale Früchte",
   "ShowSeasonalBerryHazelnut": "Zeige Haselnüsse auf Bäumen",
+  "ShowOasisClothes": "Show Oasis's rare clothing items", // TODO
+  "ShowOasisClothesAll": "Show all clothing items",       // TODO
   //Others
   "LevelUp": "Level aufgestiegen"
 }
