--- a/UIInfoSuite2/i18n/pt.json
+++ b/UIInfoSuite2/i18n/pt.json
@@ -39,6 +39,9 @@
   "LuckStatus4": "Os espíritos estão neutros",
   "LuckStatus5": "Os espíritos estão meio aborrecidos",
   "LuckStatus6": "Os espíritos estão muito aborrecidos",
+  // Display icons - Merchants
+  "SandyClothingItemRare": "Sandy has rare clothing for sale",  // TODO
+  "SandyClothingItemAll": "Sandy's Clothing Item: {0}",         // TODO
   //Settings - General
   "ShowLevelUpAnimation": "Mostrar animação de Level Up",
   "ShowExperienceBar": "Mostrar barra de experiência",
@@ -68,6 +71,8 @@
   "ShowExactValue": "Mostra o valor exato",
   "ShowSeasonalBerry": "Mostrar coletáveis sazonais",
   "ShowSeasonalBerryHazelnut": "Mostrar avelãs nas árvores",
+  "ShowOasisClothes": "Show Oasis's rare clothing items", // TODO
+  "ShowOasisClothesAll": "Show all clothing items",       // TODO
   //Others
   "LevelUp": "Level Up"
 }
