--- a/UIInfoSuite2/i18n/tr.json
+++ b/UIInfoSuite2/i18n/tr.json
@@ -39,6 +39,9 @@
   "LuckStatus4": "Ruhlar bugün tarafsız hissediyor",
   "LuckStatus5": "Şans bugün yanında değil",
   "LuckStatus6": "Belki de bugün evde kalmalısın...",
+  // Display icons - Merchants
+  "SandyClothingItemRare": "Sandy has rare clothing for sale",  // TODO
+  "SandyClothingItemAll": "Sandy's Clothing Item: {0}",         // TODO
   //Settings - General
   "ShowLevelUpAnimation": "Seviye atlama animasyonunu göster",
   "ShowExperienceBar": "Deneyim çubuğu görünebilsin",
@@ -68,6 +71,8 @@
   "ShowExactValue": "Tam değeri göster",
   "ShowSeasonalBerry": "Mevsimsel yemişleri göster",
   "ShowSeasonalBerryHazelnut": "Ağaçlardaki fındıkları göster",
+  "ShowOasisClothes": "Show Oasis's rare clothing items", // TODO
+  "ShowOasisClothesAll": "Show all clothing items",       // TODO
   //Others
   "LevelUp": "Seviye atlama"
 }
