Add Game State Resolvers to figure out when things happen in the future

--- a/UIInfoSuite2/i18n/default.json
+++ b/UIInfoSuite2/i18n/default.json
@@ -117,5 +117,14 @@
   "ShowSeasonalBerryHazelnut": "Show hazelnuts on trees",
   //Others
   "LevelUp": "Level Up",
-  "TrackOnMap": "Track on map"
+  "TrackOnMap": "Track on map",
+  // Game State Requirement Strings
+  "GSQ.Requirements.Unsupported": "Unsupported condition {0} from {1}, please report!",
+  "GSQ.Requirements.ParseError": "Requires {0}",
+  "GSQ.Requirements.DaysPlayedRange": "Requires {0} - {1} days played",
+  "GSQ.Requirements.DaysPlayedMinimum": "Requires at least {0} days played",
+  "GSQ.Requirements.GreenRain": "Requires Green Rain",
+  "GSQ.Requirements.Season": "Requires season to be {0}",
+  "GSQ.Requirements.YearRange": "Requires Year {0} - {1}",
+  "GSQ.Requirements.YearMinimum": "Requires Year {0}+"
 }
